some zhou loc, takin a break

--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -191,8 +191,8 @@
  me_zhou_16.a:0 "We're so great!"
 
  me_zhou_17_title:0 "$zhou_missions_task_17$"
- me_zhou_17_desc:0 ""
- me_zhou_17.a:0 ""
+ me_zhou_17_desc:0 "As our domain expands we have found use of #E Royal Inspectors#!. We shall make sure the bureaucracy of our state is as unspoiled and clean as can be. Taxes, levies, and proper governorship will assure that we shall not again fall as we once again blossom into a great state."
+ me_zhou_17.a:0 "Maybe inspections aren't so bad!"
  
  me_zhou_1700_title:0 ""
  me_zhou_1700_desc:0 ""
@@ -219,49 +219,48 @@
  me_zhou_18.a:0 "Let's outlaw crime next."
 
  me_zhou_19_title:0 "$zhou_missions_task_19$"
- me_zhou_19_desc:0 ""
- me_zhou_19.a:0 ""
+ me_zhou_19_desc:0 "In the past, we have never had a truly centralized form of currency nor measures. In this new era, we now realize how important they can be for governing a centralized empire. This will complete the final step in our growing centralized authority."
+ me_zhou_19.a:0 "A new monetary era unfolds."
  
- me_zhou_1900_title:0 ""
- me_zhou_1900_desc:0 ""
- me_zhou_1900.a:0 ""
+ me_zhou_1900_title:0 "$zhou_missions_task_19$: A Small Fortune"
+ me_zhou_1900_desc:0 "The standardization of currency has yielded extra taxes! As it turns out, the currency has created more trust and higher profits in the market. While all the math is boring, the extra funds are more than appreciated!"
+ me_zhou_1900.a:0 "Quick, I must bathe in gold."
  
- me_zhou_1901_title:0 ""
- me_zhou_1901_desc:0 ""
- me_zhou_1901.a:0 ""
+ me_zhou_1901_title:0 "$zhou_missions_task_19$: A Changed Mind"
+ me_zhou_1901_desc:0 "Our recent developments in standardization of measures has apparently impressed one of the most powerful men in our country. With the increased accuracy available to them, they find it easier to trust in people and have gained a reputation as an honest official."
+ me_zhou_1901.a:0 "So you're saying he was dishonest before...?"
  
- me_zhou_1902_title:0 ""
- me_zhou_1902_desc:0 ""
- me_zhou_1902.a:0 ""
+ me_zhou_1902_title:0 "$zhou_missions_task_19$: Growing Pains"
+ me_zhou_1902_desc:0 "The monetary reform is not a painless thing to push through. Like birth, through pain will come a new beginning... unfortunately this means that we have had to dig into the state treasury in order to fund the new currency."
+ me_zhou_1902.a:0 "Not my money!"
  
- me_zhou_1903_title:0 ""
- me_zhou_1903_desc:0 ""
- me_zhou_1903.a:0 ""
+ me_zhou_1903_title:0 "$zhou_missions_task_19$: Change is Scary"
+ me_zhou_1903_desc:0 "Of course, in every modernization attempt, there too comes the more conservatively minded people. Unfortunately, the changes your regime has brought has left this class of people rather annoyed. They complain why they need a new currency and new measures now when the old ways were just fine."
+ me_zhou_1903.a:0 "Some people just can't see past themselves!"
 
- me_zhou_20_title:0 "$zhou_missions_task_20$"
- me_zhou_20_desc:0 ""
- me_zhou_20.a:0 ""
- me_zhou_20.b:0 ""
+ me_zhou_20_title:0 "$zhou_missions_task_20$ Finale"
+ me_zhou_20_desc:0 "After much deliberation and debate, #E The Great Assembly#! comes to an end. Different factions petition different ideas, but ultimately, it's the choice of the #E Emporer#! Shall we strip most of the autonomy over all of #E China#!, or shall we reinstate an autonomous subject system."
+ me_zhou_20.a:0 "I choose decentralized rule!"
+ me_zhou_20.b:0 "I choose centralized rule!"
  
- me_zhou_2000_title:0 ""
- me_zhou_2000_desc:0 ""
- me_zhou_2000.a:0 ""
- me_zhou_2000.b:0 ""
+ me_zhou_2000_title:0 "$zhou_missions_task_20$ I"
+ me_zhou_2000_desc:0 "#E The Great Assembly#! will be held soon. Here, we will decide the future of the #E Zhou Dynasty#!. Simply conquering land is not good enough. As we have learned from the past, even having an adept bureaucracy isn't enough. We need to make sure our system of governance will be that which we can make last."
+ me_zhou_2000.a:0 "Let us make the preparations."
+# me_zhou_2000.b:0 ""
  
- me_zhou_2001_title:0 ""
- me_zhou_2001_desc:0 ""
- me_zhou_2001.a:0 ""
- me_zhou_2001.b:0 ""
+ me_zhou_2001_title:0 "$zhou_missions_task_20$ II"
+ me_zhou_2001_desc:0 "The authorities of our land comes in two parts; the regional governance and the imperial governance. Each comes with its pros and cons.\n\nThe #E Imperial Court#! shows our grandeur and power. We have a direct eye over everything that happens. Yet it also makes us susceptible to corruption within the court, not to mention weaker to internal strife.\n\nThe #E Provincial Governors#! provide us external power. They keep our borders safe, and they allow our word to be spread from #E Chengzhou#! to #E Chaisang#!. However, a governor can grow too powerful and rival the power of the #E Emperor#!.\n\nWhich faction should we choose to support?"
+ me_zhou_2001.a:0 "The Imperial Court"
+ me_zhou_2001.b:0 "The Regional Governors"
  
- me_zhou_2002_title:0 ""
- me_zhou_2002_desc:0 ""
- me_zhou_2002.a:0 ""
- me_zhou_2002.b:0 ""
+ me_zhou_2002_title:0 "$zhou_missions_task_20$ III"
+ me_zhou_2002_desc:0 "A question arrises from the court during the meeting. How strong is the #E Emperor's#! word? Of course, it carries weight regardless, but in the past, different regions expected a certain amount of autonomy. Our bureaucracy has improved since then, and we have the ability to closer govern our land, however, people might find it more #E Tyrannical#! to have our breath on the back of their necks."
+ me_zhou_2002.a:0 "I will watch you like a hawk."
+ me_zhou_2002.b:0 "Give them some personal space."
  
- me_zhou_2003_title:0 ""
- me_zhou_2003_desc:0 ""
- me_zhou_2003.a:0 ""
- me_zhou_2003.b:0 ""
+ me_zhou_2003_title:0 "$zhou_missions_task_20$ IV"
+ me_zhou_2003_desc:0 "#E The Great Assembly#! has gone exceptionally. People talk of your greatness unabashedly. You speak powerfully, projecting your voice so that all may hear your decrees. It is clear that the #E Zhou Dynasty#! is moving in a safe direction under your leadership."
+ me_zhou_2003.a:0 "I am somewhat of a speechwriter, I suppose."
 
  me_zhou_21_title:0 "$zhou_missions_task_21$"
  me_zhou_21_desc:0 "None can deny now that the #E Mandate of Heaven#! has come back into the hands of the #E Zhourites#!. Surely, all thought it impossible. From a single city with no true power to the grandiose empire we see today. It is truly infathomable! We will remember the times of the #E Western Zhou#! as well as the times of the #E Eastern Zhou#!. However, as we usher in a new era of #E Zhou#! dominance, we are fit to remember that all these periods have belonged to our continous state, our great dynasty. A dynasty that has lived since the Age of Bronze. A dynasty that has never been extinguished despite the whole of #E China#! attempting to do just that.\n\nA dynasty that is filled with the sons of heaven itself."
@@ -294,11 +293,15 @@
  unified_laws: "Unified Laws"
  unified_currency_measure: "Unified Currency and Measures"
  sons_of_heaven_zhou_mod: "Sons of Heaven"
- desc_zhou_agriculture_mod: "TODO MOD"
- desc_zhou_inspected_country: "TODO MOD"
- desc_unified_laws: "TODO MOD"
- desc_unified_currency_measure: "TODO MOD"
- desc_sons_of_heaven_zhou_mod: "TODO MOD"
+ desc_zhou_agriculture_mod: "We are adept at Hydraulic Engineering"
+ desc_zhou_inspected_country: "Royal Inspectors have increased efficiency in our management."
+ desc_unified_laws: "We have a unified code of law."
+ desc_unified_currency_measure: "We have unified our currency and our measures systems."
+ desc_sons_of_heaven_zhou_mod: "We have proven ourselves the true Sons of Heaven."
+ zhou_sided_with_centre: "Empowered Imperial Court"
+ zhou_sided_with_regions: "Empowered Regional Governors"
+ zhou_decentralized_rule: "Decentralized Rule"
+
  
  zhou_bride_mod: "Zhou Bride"
  zhou_secured_wei_throne: "Secured the Throne of Wei"
