Sapmi Task Pics

--- a/localization/english/missions/sapmi_missions_l_english.yml
+++ b/localization/english/missions/sapmi_missions_l_english.yml
@@ -8,46 +8,46 @@
  #Missions
 
  sapmi_missions_task_1: "Raise our Navy"
- sapmi_missions_task_1_DESC: "Our tribe may be of no significance as it's overshadowed by its neighbors. Nevertheless we must raise our navy in order to push for and protect our independence!"
+ sapmi_missions_task_1_DESC: "Our tribe may be of no significance as it's overshadowed by its neighbors. Nevertheless we must raise our navy in order to push for and protect our independence!\n\n\n\n\n\n\n\n\n\n@greek_mil4!"
 
  sapmi_missions_task_2: "Agricultural Communities"
- sapmi_missions_task_2_DESC: "Our nation's economy is primarly based on fishing and agriculture. It would be sensible to secure new sources and thus build a strong foundation for a prosperous nation."
+ sapmi_missions_task_2_DESC: "Our nation's economy is primarly based on fishing and agriculture. It would be sensible to secure new sources and thus build a strong foundation for a prosperous nation.\n\n\n\n\n\n\n\n\n\n@celt_mil6!"
 
  sapmi_missions_task_3: "Explore the Baltic Sea"
- sapmi_missions_task_3_DESC: "We should establish a fleet of explorers who shall navigate through the Baltic Sea, and find opportunities for our own colonial ambitions."
+ sapmi_missions_task_3_DESC: "We should establish a fleet of explorers who shall navigate through the Baltic Sea, and find opportunities for our own colonial ambitions.\n\n\n\n\n\n\n\n\n\n@celt_mil2!"
 
  sapmi_missions_task_4: "Development of Skirith"
- sapmi_missions_task_4_DESC: "In order to survive, we must adapt. As time moves on, our ability to navigate the fields of snow, hide in the white, and dominate others who try to invade will improve."
+ sapmi_missions_task_4_DESC: "In order to survive, we must adapt. As time moves on, our ability to navigate the fields of snow, hide in the white, and dominate others who try to invade will improve.\n\n\n\n\n\n\n\n\n\n@celt_mil1!"
 
  sapmi_missions_task_5: "Control the Baltic Trade"
- sapmi_missions_task_5_DESC: "Baltic fishes nourish our people, and its waves lead us to foreign treasures. But it also plays another important role as it is our sea of commerce and trade. We should establish markets in key provinces of our country so we can control the trade."
+ sapmi_missions_task_5_DESC: "Baltic fishes nourish our people, and its waves lead us to foreign treasures. But it also plays another important role as it is our sea of commerce and trade. We should establish markets in key provinces of our country so we can control the trade.\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  sapmi_missions_task_6: "Honor our Ancestors" #'Muricans forget u \\ ur mum ~ izn
- sapmi_missions_task_6_DESC: "The land called #E Tivotek#! would be a perfect place for us to arrect a #E #Y Tarand Grave#!#!, the signature burial style of our people."
+ sapmi_missions_task_6_DESC: "The land called #E Tivotek#! would be a perfect place for us to arrect a #E #Y Tarand Grave#!#!, the signature burial style of our people.\n\n\n\n\n\n\n\n\n\n@celt_mil13!"
 
- sapmi_missions_task_7: "Colonize Scandia" #should be colonise \\ if you call us colonizers at least let us spell it right ;p ~ izn
- sapmi_missions_task_7_DESC: "Across the sea lays a land called #T Scandia#!. Like our homeland, it is cold, filled with lakes, and ripe for the taking. Let us use what we have learned at home to expand our influence west."
+ sapmi_missions_task_7: "Colonize Scandia" #should be colonise \\ if you call us colonizers at least let us spell it right ;p ~ izn ~~ No, No, No - Margaret Thatcher
+ sapmi_missions_task_7_DESC: "Across the sea lays a land called #T Scandia#!. Like our homeland, it is cold, filled with lakes, and ripe for the taking. Let us use what we have learned at home to expand our influence west.\n\n\n\n\n\n\n\n\n\n@greek_mil9!"
 
  sapmi_missions_task_8: "White Death of the Fenns"
- sapmi_missions_task_8_DESC: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Fenns. Tales of our military might will be born from our many campaigns to come."
+ sapmi_missions_task_8_DESC: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Fenns. Tales of our military might will be born from our many campaigns to come.\n\n\n\n\n\n\n\n\n\n@celt_mil7!"
 
  sapmi_missions_task_9: "Central Sanctuary"
- sapmi_missions_task_9_DESC: "Continuing on the path to proselytize our people, we must strive forward and found a new central sanctuary buzzing with priest activity, as a symbol of our unstoppable and unquenchable growth!"
+ sapmi_missions_task_9_DESC: "Continuing on the path to proselytize our people, we must strive forward and found a new central sanctuary buzzing with priest activity, as a symbol of our unstoppable and unquenchable growth!\n\n\n\n\n\n\n\n\n\n@celt_mil3!"
 
  sapmi_missions_task_10: "Scandian Takeover"
- sapmi_missions_task_10_DESC: "Our success in colonizing #T Scandia#! spurs on our desire to dominate the area. We shall have all of #T Scandia#! for our people!"
+ sapmi_missions_task_10_DESC: "Our success in colonizing #T Scandia#! spurs on our desire to dominate the area. We shall have all of #T Scandia#! for our people!\n\n\n\n\n\n\n\n\n\n@greek_mil11!"
 
  sapmi_missions_task_11: "Baltic Dominance"
- sapmi_missions_task_11_DESC: "The seas of the Baltic are a congenial place for a strong power. Due to recent attempts of nomads and Germanics, we must strive to protect our coasts and assert our dominance over its coasts!"
+ sapmi_missions_task_11_DESC: "The seas of the Baltic are a congenial place for a strong power. Due to recent attempts of nomads and Germanics, we must strive to protect our coasts and assert our dominance over its coasts!\n\n\n\n\n\n\n\n\n\n@greek_mil1!"
 
  sapmi_missions_task_12: "Integrate Fenns"
- sapmi_missions_task_12_DESC: "The Fenns are a people living in the dense forests to our south, where no other Sapmi lives. They are living in territory, which formally belongs to us. We should integrate them into our society so we can benefit from these forests."
+ sapmi_missions_task_12_DESC: "The Fenns are a people living in the dense forests to our south, where no other Sapmi lives. They are living in territory, which formally belongs to us. We should integrate them into our society so we can benefit from these forests.\n\n\n\n\n\n\n\n\n\n@celt_mil8!"
 
  sapmi_missions_task_13: "Reorganize Tribes" #reorganising reorganize
- sapmi_missions_task_13_DESC: "Liberty is most sweet to those who have tasted the bitterness of servitude. Let us strive for our autonomy and undo the shackles of our past! The Sapmi shall be free."
+ sapmi_missions_task_13_DESC: "Liberty is most sweet to those who have tasted the bitterness of servitude. Let us strive for our autonomy and undo the shackles of our past! The Sapmi shall be free.\n\n\n\n\n\n\n\n\n\n@celt_mil2!"
 
  sapmi_missions_task_14: "Land of the People"
- sapmi_missions_task_14_DESC: "Despite our success in military and administrative matters, the question of our national identity is slowly formulating within our society. We must ensure the supremacy of our culture by expanding even further."
+ sapmi_missions_task_14_DESC: "Despite our success in military and administrative matters, the question of our national identity is slowly formulating within our society. We must ensure the supremacy of our culture by expanding even further.\n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 
 
  #Events
