--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -1379,6 +1379,7 @@
  form_miao_desc: "All Miao people were said to have descended from the legendary Jiuli tribe, but they were defeated by Yu the Great in battles and were thus dispersed by the encroaching Yue peoples. The rest were subjugated by the Chinese of the Central Plains region. \n\nIt is time for us to reverse this and unite all Miao people again."
  
  
+ NAN: "Nanyue"
  NANYUE_NAME: "Nanyue"
  NANYUE_ADJECTIVE: "Nanyuan"
  form_nanyue: "Form Nanyue"
