--- a/localization/english/ti_regionnames_l_english.yml
+++ b/localization/english/ti_regionnames_l_english.yml
@@ -203,6 +203,8 @@
  ussuri_area:1 "Ussuri"
  amur_area:1 "Amur"
  sahaliyan_area:1 "Sahaliyan"
+
+ burma_region:2 "Pyu"
  
  #rivers
  baltic_sea_river_region:0 ""
