some map and setup changes, few new provinces and tags, zhongshan fixes, barb loc fixes.

--- a/localization/english/countries_l_english.yml
+++ b/localization/english/countries_l_english.yml
@@ -530,6 +530,12 @@
  AILAO_ADJ:0 "Ailao"
  PUBU:1 "Pubu"
  PUBU_ADJ:0 "Pubu"
+ SYRBOTIAN:1 "Syrbotia"
+ SYRBOTIAN_ADJ:0 "Syrbotian"
+ DABELIAN:1 "Dabelia"
+ DABELIAN_ADJ:0 "Dabelian"
+ CRITENSI:1 "Critensia"
+ CRITENSI_ADJ:0 "Critensian"
  #THIS IS BRITANNIA
  CAT:1 "Cantiacia"
  CAT_ADJ:0 "Cantiacian"
