--- a/localization/english/missions/zhongshan_missions_l_english.yml
+++ b/localization/english/missions/zhongshan_missions_l_english.yml
@@ -70,7 +70,7 @@
 
  me_zhongshan_2_title: "$zhongshan_missions_task_2$"
  me_zhongshan_2_desc: "The [ROOT.GetCountry.GetName] emissaries arrived at [GetProvince('(int32)8504').GetName] and prostrated to the King of [GetCountry('QII').GetName)], [GetCountry('QII').GetRuler.GetName]. They begged the lord for any aid they could provide, but most of all sought a guarantee from the king that they would commit their forces against [GetCountry('ZHA').GetName)] should they attempt to absorb us. [GetCountry('QII').GetRuler.GetName] indulged our proposition, and hosted a feast for our emissaries, before sending them back to [GetProvince('(int32)8686').GetName] with the assurance that they will be protected."
- me_zhongshan_2.a: "Qii will save us."
+ me_zhongshan_2.a: "Qi will save us."
  
  me_zhongshan_200_title: "Petition From Zhongshan"
  me_zhongshan_200_desc: "The crumbling statelet of [GetCountry('ZHS').GetName)] has sent a final plea to our King, [GetCountry('QII').GetRuler.GetName], for protection against our mutual rival [GetCountry('ZHA').GetName)]. They have long proven an excellent distraction for the #E Zhao#! lords, keep their minds off of the lands of [GetCountry('WII').GetName)]. This is an opporunity we cannot pass up, and this will be the final chance."
@@ -81,7 +81,7 @@
  me_zhongshan_3.a: "The Baidi elite are now equals to the Ji nobles."
 
  me_zhongshan_4_title: "$zhongshan_missions_task_4$"
- me_zhongshan_4_desc: "Our tribal spies have successfully infiltrated the enemies camps, and reached the royals tents of the tribal lords of #E Linhu#!, #E Loufan#! and #E Hezongshi#!. The spies at first blended into the main horde, and began sowing discontent about their subjugation by the [GetCountry('ZHA').GetName)] to the tribesmen around the campfires each night. As wounds were reopened and hatred turned into riot in the tribal camps, the leaders of the three tribal tributaries were persuaded by our spies to reach out to [ROOT.GetCountry.GetName], and hatch a plan to throw off the #E Zhao#! yoke. Should we declare war now, at this most opportune time?"
+ me_zhongshan_4_desc: "Our tribal spies have successfully infiltrated the enemy camps, and reached the royals tents of the tribal lords of #E Linhu#!, #E Loufan#! and #E Hezongshi#!. The spies at first blended into the main horde, and began sowing discontent about their subjugation by the [GetCountry('ZHA').GetName)] to the tribesmen around the campfires each night. As wounds were reopened and hatred turned into riot in the tribal camps, the leaders of the three tribal tributaries were persuaded by our spies to reach out to [ROOT.GetCountry.GetName], and hatch a plan to throw off the #E Zhao#! yoke. Should we declare war now, at this most opportune time?"
  me_zhongshan_4.a: "We will crush Zhao!"
  me_zhongshan_4.b: "We cannot risk open warfare now."
 
@@ -106,7 +106,7 @@
  me_zhongshan_8.a: "We are back from the brink!"
 
  me_zhongshan_9_title: "$zhongshan_missions_task_9$"
- me_zhongshan_9_desc: "The armies of [GetCountry('YAN').GetName)] had attempted to set an ambush on the road to [GetProvince('(int32)8742').GetName], but our allies in [GetCountry('QII').GetRuler.GetName] knew the terrain of the region well, as they had frequently fought against their northern rival. #E Qi#! spies sent word to King [ROOT.GetCountry.GetRuler.GetName] of the trap, and he made a last minute change to split the army in two, in an attempt to then circle around the positions given to us by our allies. The #E Qi#! information proved correct, and the would be ambushers were completely taken aback as the armies of [ROOT.GetCountry.GetName] conducted a brilliant pincer maneuver from the left and right rear. A token force of foot soldiers was also sent into the frontal position the #E Qi#! infrantry had expected the entire army to be in, which served as a hammer to the anvil cavalry charges in the rear. The armies of #E Yan#! were broken, and their heartland seized by the great #E Zhongshan#!!"
+ me_zhongshan_9_desc: "The armies of [GetCountry('YAN').GetName)] had attempted to set an ambush on the road to [GetProvince('(int32)8742').GetName], but our allies in [GetCountry('QII').GetName)] knew the terrain of the region well, as they had frequently fought against their northern rival. #E Qi#! spies sent word to King [ROOT.GetCountry.GetRuler.GetName] of the trap, and he made a last minute change to split the army in two, in an attempt to then circle around the positions given to us by our allies. The #E Qi#! information proved correct, and the would be ambushers were completely taken aback as the armies of [ROOT.GetCountry.GetName] conducted a brilliant pincer maneuver from the left and right rear. A token force of foot soldiers was also sent into the frontal position the #E Qi#! infrantry had expected the entire army to be in, which served as a hammer to the anvil cavalry charges in the rear. The armies of #E Yan#! were broken, and their heartland seized by the great #E Zhongshan#!!"
  me_zhongshan_9.a: "Yan is neutered."
 
  me_zhongshan_10_title: "$zhongshan_missions_task_10$"
@@ -126,7 +126,7 @@
  me_zhongshan_13.a: "Marvel at this wondrous sword!"
 
  me_zhongshan_14_title: "$zhongshan_missions_task_14$"
- me_zhongshan_14_desc: "Vast swathes of the northern plains and deserts has finally be claimed by [ROOT.GetCountry.GetName], thanks to the conquests and diplomacy of you my King [ROOT.GetCountry.GetRuler.GetName]! Our dominion over the peoples of #E Shuofang#! and #E Modong#! is only just beginning, as more tribesmen flock to our banner, swelling the size of our borders. Our new subjects demand we claim even more land from the disparate clansmen of the steppe, to further entrench the tribal customs and interests in the royal court at [GetProvince('(int32)8686').GetName] through demographic enhancement."
+ me_zhongshan_14_desc: "Vast swathes of the northern plains and deserts has finally been claimed by [ROOT.GetCountry.GetName], thanks to the conquests and diplomacy of you my King [ROOT.GetCountry.GetRuler.GetName]! Our dominion over the peoples of #E Shuofang#! and #E Modong#! is only just beginning, as more tribesmen flock to our banner, swelling the size of our borders. Our new subjects demand we claim even more land from the disparate clansmen of the steppe, to further entrench the tribal customs and interests in the royal court at [GetProvince('(int32)8686').GetName] through demographic enhancement."
  me_zhongshan_14.a: "The northern tribesmen are under our domain."
 
  me_zhongshan_15_title: "$zhongshan_missions_task_15$"
