--- a/localization/english/ti_countries_l_english.yml
+++ b/localization/english/ti_countries_l_english.yml
@@ -515,3 +515,9 @@
  PA5_ADJ: "Vellaborian"
  PA6: "Dulgubnia"
  PA6_ADJ: "Dulgubnian"
+ PA7: "Trumpilia"
+ PA7_ADJ: "Trumpilian"
+ PA8: "Feltrinia"
+ PA8_ADJ: "Feltrinian"
+ PA9: "Camunia"
+ PA9_ADJ: "Camunian"
