--- a/localization/english/ti_provincenames_l_english.yml
+++ b/localization/english/ti_provincenames_l_english.yml
@@ -4828,3 +4828,11 @@ PROV10961:1 "Mare Formosa"
  PROV12880:0 "Varu"
  PROV12881:0 ""
  PROV12882:0 ""
+ PROV12883:0 ""
+ PROV12884:0 ""
+ PROV12885:0 "Trumpili"
+ PROV12886:0 "Feltrini"
+ PROV12887:0 "Camuni"
+ PROV12888:0 "Ahvenanmaa"
+ PROV12889:0 "Biliu"
+ PROV12890:0 "Xishan"
