--- a/localization/english/ti_regionnames_l_english.yml
+++ b/localization/english/ti_regionnames_l_english.yml
@@ -257,3 +257,7 @@
  mara_nanfang_hai_area:0 "Mare Nanfang Hai"
  mara_taiheiyo_area:0 "Mare Taiheiyo"
  andaman_sea_area:0 "Mare Andaman"
+ 
+ #korea splits
+ 
+ liaoyang_area:0 "Liaoyang"
