Rest of Yue Diffs

--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -298,38 +298,38 @@
  
  #Events
  me_yue_langyayue_1_title: "$missions_yue_state_task_1$"
- me_yue_langyayue_1_desc: ""
- me_yue_langyayue_1.a: ""
+ me_yue_langyayue_1_desc: "$me_yue_state_1_desc$"
+ me_yue_langyayue_1.a: "$me_yue_state_1.a$"
 
  me_yue_langyayue_2_title: "$missions_yue_state_task_2$"
  me_yue_langyayue_2_desc: "The debris of past sorrows has been cleared, and new settlers have been enticed by the promise of prosperity and security behind our walls.\n\nThe city of [GetProvince('(int32)8527').GetName] shines brightly once more and will again be a city to compete with the likes of [GetProvince('(int32)8504').GetName] and [GetProvince('(int32)8379').GetName]!"
  me_yue_langyayue_2.a: "$me_yue_state_2.a$"
 
  me_yue_langyayue_5_title: "$missions_yue_state_task_5$"
- me_yue_langyayue_5_desc: ""
- me_yue_langyayue_5.a: ""
+ me_yue_langyayue_5_desc: "$me_yue_state_5_desc$"
+ me_yue_langyayue_5.a: "$me_yue_state_5.a$"
  
  me_yue_langyayue_500_title: "$missions_yue_state_task_5$"
- me_yue_langyayue_500_desc: ""
- me_yue_langyayue_500.a: ""
+ me_yue_langyayue_500_desc: "$me_yue_state_500_desc$"
+ me_yue_langyayue_500.a: "$me_yue_state_500.a$"
  
  me_yue_langyayue_15_title: "$missions_yue_state_task_15$"
- me_yue_langyayue_15_desc: ""
- me_yue_langyayue_15.a: ""
+ me_yue_langyayue_15_desc: "$me_yue_state_15_desc$"
+ me_yue_langyayue_15.a: "$me_yue_state_15.a$"
 
  me_yue_langyayue_16_title: "$missions_yue_state_task_16$"
- me_yue_langyayue_16_desc: ""
- me_yue_langyayue_16.a: ""
+ me_yue_langyayue_16_desc: "With the fall of [GetProvince('(int32)8718').GetName], now all major rivers are in control of our seafaring people. It is already too late for all the ignorant rulers of the Middle Kingdoms to learn their lesson, but it surely will be a painful one."
+ me_yue_langyayue_16.a: "The Yue armada is on its way."
  
  me_yue_langyayue_20_title: "$missions_yue_state_task_20$"
- me_yue_langyayue_20_desc: ""
- me_yue_langyayue_20.a: ""
+ me_yue_langyayue_20_desc: "$me_yue_state_20_desc$"
+ me_yue_langyayue_20.a: "$me_yue_state_20.a$"
  
  #################
  #Yue Tribes Delta#
  #################
  missions_yue_tribes: "New Yue Dynasty"
- missions_yue_tribes_DESCRIPTION: "TODO"
+ missions_yue_tribes_DESCRIPTION: "$missions_yue_state_CRITERIA_DESCRIPTION$"
  missions_yue_tribes_CRITERIA_DESCRIPTION: "$missions_yue_state_CRITERIA_DESCRIPTION$"
  missions_yue_tribes_BUTTON_TOOLTIP: "$missions_yue_state_BUTTON_TOOLTIP$"
 
@@ -404,29 +404,29 @@
  #Events
 
  me_yue_tribes_2_title: "$missions_yue_tribes_task_2$"
- me_yue_tribes_2_desc: ""
- me_yue_tribes_2.a: ""
+ me_yue_tribes_2_desc: "Much has changed during the lifetime of [ROOT.GetCountry.GetRuler.GetName] in [ROOT.GetCountry.GetCapital.GetName], and only the elder generation remembers the old days, when our capital was just a collection of some wooden huts."
+ me_yue_tribes_2.a: "I found [ROOT.GetCountry.GetCapital.GetName] a city of wood and left it a city of stone."
  
  me_yue_tribes_3_title: "$missions_yue_tribes_task_3$"
- me_yue_tribes_3_desc: ""
- me_yue_tribes_3.a: ""
+ me_yue_tribes_3_desc: "$me_yue_state_3_desc$"
+ me_yue_tribes_3.a: "$me_yue_state_3.a$"
  
  me_yue_tribes_15_title: "$missions_yue_tribes_task_15$"
- me_yue_tribes_15_desc: ""
- me_yue_tribes_15.a: ""
+ me_yue_tribes_15_desc: "Now that the Yue tribes are united under one banner, the states of the Middle Kingdoms will soon get to know what this means."
+ me_yue_tribes_15.a: "Only united we are strong."
 
  me_yue_tribes_16_title: "$missions_yue_tribes_task_16$"
- me_yue_tribes_16_desc: ""
- me_yue_tribes_16.a: ""
+ me_yue_tribes_16_desc: "[ROOT.GetCountry.GetRuler.GetName] has accepted our generous offer and will now rule our new kingdom."
+ me_yue_tribes_16.a: "Long live the descendants of Yu the Great!"
  
  me_yue_tribes_1600_title: "$missions_yue_tribes_task_16$"
- me_yue_tribes_1600_desc: ""
- me_yue_tribes_1600.a: ""
- me_yue_tribes_1600.b: ""
+ me_yue_tribes_1600_desc: "We have received an offer by the Yue tribes to rule them. The constant conflicts of the past years have taken their toll on [ROOT.GetCountry.GetRuler.GetName], as he now considers going into exile to those well protected mountains to our south."
+ me_yue_tribes_1600.a: "He will go into exile."
+ me_yue_tribes_1600.b: "There is still hope to defeat the Chu on our own."
  
  me_yue_tribes_1601_title: "$missions_yue_tribes_task_16$"
- me_yue_tribes_1601_desc: ""
- me_yue_tribes_1601.a: ""
+ me_yue_tribes_1601_desc: "[ROOT.GetCountry.GetRuler.GetName] has accepted our generous offer and will now rule our new kingdom."
+ me_yue_tribes_1601.a: "Long live the descendants of Yu the Great!"
  
  me_yue_tribes_90_title: "The Fall Of The State Of Yue"
  me_yue_tribes_90_desc: "In 333 BC, King [GetCharacter('(int32)591').GetName] of Yue went north to attack Qi. He believed the Qi envoy named Tian and led his army to attack Chu, where he was unexpectedly ambushed, defeated and died. Since [GetCharacter('(int32)591').GetName] had no designated successor, the country of Yue fell apart and his eldest son, [GetCharacter('(int32)631').GetName], and second son, [GetCharacter('(int32)634').GetName], competed.\n\nTwo years ago the state of Chu used this weakness to conquer Wu, so that only a small strip of land around the city of Langya in the north and the southernmost territories around Kuaiji are left of the once great state of Yue.\n\nSome say the dynasty's future no longer lies in the north but rather in the south among the Yue tribes."
