--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -105,6 +105,7 @@
  kumaso:0 "Kumaso"
  aduma:0 "Aduma"
  nansei:0 "Nansei"
+ jomon_yayoi:0 "Jomon"
  # Jomon cultures, moved by Izn
  #ainu:0 "Ezo"
  #dewa:0 "Dewa"
