--- a/localization/english/deities/acb_deities_chinese_l_english.yml
+++ b/localization/english/deities/acb_deities_chinese_l_english.yml
@@ -239,3 +239,6 @@
  deity_mizuhanome:0 "$omen_mizuhanome$"
  omen_mizuhanome:0 "Mizuhanome"
  omen_mizuhanome_desc:0 "#Y Kodo deities#!\nMizuhanome was a Kami of water. She was a daughter of Izanami, born from her urine, and is sometimes known as the water dragon goddess."
+ deity_inari:0 "$omen_inari$"
+ omen_inari:0 "Inari"
+ omen_inari_desc:0 "#Y Kodo deities#!\nInari is the Kami of foxes. She is also called as Inari-Okami. Inari is considered both a fertility god and associated with messages, as foxes were said to be able to deliver messages to mortals from Inari herself."
