--- a/localization/english/ti_cultures_l_english.yml
+++ b/localization/english/ti_cultures_l_english.yml
@@ -63,6 +63,7 @@
  duuchuu:0 "Duuchuu"
  yaeyama:0 "Yaeyama"
  emishi:0 "Emishi"
+ jeulmeun:0 "Jeulmeun"
  #New Rong
  nuomuhong:0 "Nuomuhong"
  gyalrong:0 "Gyalrong"
