--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -180,14 +180,14 @@
  set_priestly_support_focus:0 "[THIS.GetCharacter.GetName|Y] will change their character focus to #Y Priestly#!"
  set_piety_focus:0 "[THIS.GetCharacter.GetName|Y] will change their character focus to #Y Piety#!"
 
- add_100_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 100#! Splendor @splendor!"
- add_200_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 200#! Splendor @splendor!"
- add_300_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 300#! Splendor @splendor!"
- add_400_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 400#! Splendor @splendor!"
- add_500_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 500#! Splendor @splendor!"
- add_600_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 600#! Splendor @splendor!"
- add_700_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 700#! Splendor @splendor!"
- add_800_splendor_tt:0 "[THIS.GetCountry.GetName] gains #T 800#! Splendor @splendor!"
+ add_100_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 100#! Splendor @splendor!"
+ add_200_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 200#! Splendor @splendor!"
+ add_300_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 300#! Splendor @splendor!"
+ add_400_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 400#! Splendor @splendor!"
+ add_500_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 500#! Splendor @splendor!"
+ add_600_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 600#! Splendor @splendor!"
+ add_700_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 700#! Splendor @splendor!"
+ add_800_splendor_tt:0 "[THIS.GetCountry.GetName] gains #Y 800#! Splendor @splendor!"
  add_100_splendor_tt:0 "[THIS.GetCountry.GetName] loses #R 100#! Splendor @splendor!"
  add_200_splendor_tt:0 "[THIS.GetCountry.GetName] loses #R 200#! Splendor @splendor!"
  add_300_splendor_tt:0 "[THIS.GetCountry.GetName] loses #R 300#! Splendor @splendor!"
