--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -259,6 +259,7 @@
 
  emishi_missions_task_11:0 "Disparate Differences"
  emishi_missions_task_11_DESC:0 "We the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] were the ones to unify the #E Jomon#! of #T Honshu#!! Unfortunately, unlike the neighboring #E Yayoi#!, the #E Jomon#! tribes are much less related to one another. We need to put in extra work before us three groups can truly become one."
+ emishi_missions_task_11_tt:0 "[SCOPE.GetRootScope.GetCountry.GetRuler.GetName|E] has at least #Y 60%#! statemenship."
 
  emishi_missions_task_12:0 "The [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] Elite"
  emishi_missions_task_12_DESC:0 "[SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|E] is our primary culture. Any other #E Jomon#! culture is as distant to us than the #E Yayoi#!! We should establish a primacy over all other #E Jomons#! and use it as a basis for our new #Y Emishi#! culture!\n\n#E This will effect which #Y pops#! are converted to #Y Emishi#! culture."
@@ -278,7 +279,7 @@
 #Tooltips
  sirakawa_settle_tt:0 "Immediately #Y colonize#! all #Y uncolonized#! provinces with #E Sirakawa#! culture."
  need_food_building_tt:0 "Any owned province has a #Y Farming Settlement#! building."
- oratory_focus_tree_enabled_tt:0 "[ROOT.GetCountry.GetRulerTitle|E] [ROOT.GetCountry.GetRuler.GetPraenomen|E] has the #Y Oratory Character Focus#!."
+ oratory_focus_tree_enabled_tt:0 "[SCOPE.GetRootScope.GetCountry.GetRulerTitle|E] [SCOPE.GetRootScope.GetCountry.GetRuler.GetPraenomen|E] has the #Y Oratory Character Focus#!."
  tohoku_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Tohoku#! area."
  hokkaido_claims_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gain claims on the #Y Hokkaido#! area."
  japan_culture_neighbor_tt:0 "The state culture is #Y Yayoi#!."
@@ -510,6 +511,7 @@ l_english:
  jomon_city_mod:0 "Blessings of a Kamuy."
  unlock_inari_kamuy:0 "Unlock the syncretic #E Fertility#! deity #Y Cironup-Inari#!."
  complete_tree_jomon_tt:0 "We must take one of the #Y decisions#! to end the #E Struggle for Wa#!."
+ duuchuu_trust_tt:0 "Any country with the [GetCulture('duuchuu').GetName|E] culture has at least #Y 135#! opinion of [SCOPE.GetRootScope.GetCountry.GetName|Y]."
 
 #Other
  bronze_magatama:0 "Bronze Magatama"
