--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -224,7 +224,7 @@
  xiongnu_missions_01_task_15_claims_tt: "We will get claims on the Areas of #Y Barkol#!, #Y Gobi Altai#!, #Y North Beishan#! and #Y Beishan#!."
  xiongnu_missions_01_task_18_send_emissaries: "We will send emissaries to Chinese rulers."
  xiongnu_missions_01_task_20_modun_is_ruler: "Modun is ruler."
- xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family."
- xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than #E 30#! years, who has [ROOT.GetCountry.GetName] culture and #E Tengri#! religion."
+ xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the [SCOPE.GetRootScope.GetCountry.GetRuler.GetFamilyDisplayAdjective] family."
+ xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than #E 30#! years, who has [SCOPE.GetRootScope.GetCountry.GetName] culture and #E Tengri#! religion."
  xiongnu_missions_01_task_2_claimant: "A new claimant will appear."
  xiongnu_missions_1_task_20_claims: "We will get claims on the Areas of #Y Gryphia#!, #Y Ob#!, #Y Transbaikal#!, #Y Bayanundar#!, #Y Aimag#!, #Y Gonglu#!, #Y Terigun#!, #Y Modong#! and #Y Andulaanzuukh#!."
